# chatgpt-maxflow-evaluation

./: LICENSE  README.md
ChatGPT-Maxflow-Evlatuation/ChatGPTImplementierungen/Dinitz/: readme
ChatGPT-Maxflow-Evlatuation/ChatGPTImplementierungen/Push-Relabel/: readme
ChatGPT-Maxflow-Evlatuation/ComputedResults/Ford_Fulkerson/: ford_fulkerson_compare.csv  ford_fulkersonv2.csv
ChatGPT-Maxflow-Evlatuation/Skripte/: check_max_flow.py  gesamtzeiten.py  readme  run_multiple_programs.sh
ChatGPT-Maxflow-Evlatuation/Testfiles/: readme
ChatGPT-Maxflow-Evlatuation/Testfiles/edmonds_testCases/: flow_network_30.max  flow_network_31.max  flow_network_35.max  flow_network_36.max  flow_network_38.max  flow_network_39.max
ChatGPT-Maxflow-Evlatuation/Testfiles/ford_fulkerson_testCases/: flow_network_10.max  flow_network_11.max  flow_network_12.max  flow_network_17.max  flow_network_18.max  flow_network_20.max  (+4 more)
ChatGPT-Maxflow-Evlatuation/Vergleichsimplementierungen/maxflow_algorithms-master/: CMakeLists.txt  graph_io.cpp
ChatGPT-Maxflow-Evlatuation/Vergleichsimplementierungen/maxflow_algorithms-master/prd/code/hi_pr/: parser.cpp
ChatGPT-Maxflow-Evlatuation/Vergleichsimplementierungen/maxflow_algorithms-master/prd/test/d_maxflow/: BVZ-tsukuba0.max.BK.cut  BVZ-tsukuba0.max.GT05.cut  BVZ-tsukuba0.max.GT05.sol  BVZ-tsukuba0.max.P-ARD1.cut  BVZ-tsukuba0.max.P-DDx2.sol  BVZ-tsukuba0.max.S-PRD.sol  BVZ-tsukuba0.max.seed_BK.cut  BVZ-tsukuba0.max.seed_BK.sol
ChatGPT-Maxflow-Evlatuation/Vergleichsimplementierungen/maxflow_algorithms-master/prd/test/d_maxflow/BVZ-tsukuba0.max_reg/: r  1.cap  r  2.cap  r  5.cap  r  6.cap  r 14.cap  rgraph
ChatGPT-Maxflow-Evlatuation/Vergleichsimplementierungen/maxflow_algorithms-master/prd/test/d_maxflow/reference_sol/: BVZ-tsukuba0.max.BK.cut  BVZ-tsukuba0.max.BK.sol  BVZ-tsukuba0.max.GT.sol  BVZ-tsukuba0.max.GT0.sol  BVZ-tsukuba0.max.GT05.sol  BVZ-tsukuba0.max.P-DDx4.sol  BVZ-tsukuba0.max.P-PRD.cut  BVZ-tsukuba0.max.S-ARD.cut  BVZ-tsukuba0.max.S-ARD.sol  BVZ-tsukuba0.max.S-PRD.cut  BVZ-tsukuba0.max.S-PRD.sol  BVZ-tsukuba0.max.seed_BK.cut
ChatGPT-Maxflow-Evlatuation/Vergleichsimplementierungen/maxflow_algorithms-master/snappy/: snappy-test.cc
ChatGPT-Maxflow-Evlatuation/Vergleichsimplementierungen/maxflow_algorithms-master/sppr/: CMakeLists.txt
ChatGPTChats/: readme
ChatGPTImplementations/Dinitz/: readme
ChatGPTImplementations/Edmonds_Karp/: readme
ChatGPTImplementations/Ford_Fulkerson/: readme
ChatGPTImplementations/Push-Relabel/: readme
Compare_implementations/: readme
Compare_implementations/Dinitz_Compare/: ghtree.h  main.cpp
Compare_implementations/Edmonds_Karp_Compare/: readme
Compare_implementations/Ford_Fulkerson_Compare/: readme
ComputedResults/Ford_Fulkerson/: ford_fulkersonv1.csv  ford_fulkersonv3.csv
Scripts/: graphGen.py  run_edmonds_compare.sh  run_solve_dimacs.sh
Testfiles/: readme
Testfiles/edmonds_testCases/: flow_network_32.max  flow_network_33.max  flow_network_34.max  flow_network_37.max
Testfiles/ford_fulkerson_testCases/: flow_network_1.max  flow_network_13.max  flow_network_14.max  flow_network_15.max  flow_network_16.max  flow_network_19.max  flow_network_2.max  flow_network_5.max  flow_network_7.max  flow_network_9.max
Testfiles/small_test_cases/: flow_network_10.max  flow_network_1000.max  flow_network_1002.max  flow_network_1004.max  flow_network_1005.max  flow_network_1007.max  flow_network_1009.max  flow_network_1012.max  flow_network_1016.max  flow_network_1017.max  flow_network_102.max  flow_network_1020.max  flow_network_1025.max  flow_network_1026.max  flow_network_1029.max  flow_network_103.max  flow_network_1030.max  flow_network_1032.max  flow_network_1034.max  flow_network_1036.max  flow_network_1037.max  flow_network_1038.max  flow_network_1039.max  flow_network_1040.max  flow_network_1041.max  flow_network_1042.max  flow_network_1043.max  flow_network_1045.max  flow_network_1046.max  flow_network_1048.max  flow_network_1049.max  flow_network_105.max  flow_network_1050.max  flow_network_1051.max  flow_network_1052.max  flow_network_1053.max  flow_network_1054.max  flow_network_1055.max  flow_network_1056.max  flow_network_1060.max  (+919 more)
(+1172 files in other folders)
